--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<h1>Hello world!</h1>
 {% for post in paginator.posts %}
 <article class="main-article">
   <div class="wrap-content">
